Fix info-box overlaps

--- a/source/styles/classes/info-box.scss
+++ b/source/styles/classes/info-box.scss
@@ -11,6 +11,7 @@
   float: right;
   font-size: .9rem;
   margin: 0 0 1em 1em;
+  position: relative;
   width: 275px;
   z-index: 1;
 }
